assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');

/* headings */

#main-heading,
a {
    font-family: "Cinzel Decorative", sans-serif;
    font-size: 175%;
    text-align: center;
    color: #4b0751;
    text-decoration: none;
}

#timeline h2 {
    font-family: "Cinzel Decorative", sans-serif;
    font-size: 200%;
    text-align: center;
    color: #4b0751;
    text-decoration-line: underline;
    text-decoration-style: double;
}

.timeline h3 {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    font-size: 125%;
}

#meet-the-villains-heading {
    font-family: "Cinzel Decorative", sans-serif;
    font-size: 200%;
    color: #4b0751;
    text-align: center;
    padding-bottom: 10px;
    padding-top: 15px;
    text-decoration-line: underline;
    text-decoration-style: double;
}

#villain-medley-video h2 {
    font-family: "Cinzel Decorative", sans-serif;
    font-size: 200%;
    color: #4b0751;
    text-align: center;
    padding: 15px 0px;
    text-decoration-line: underline;
    text-decoration-style: double;
}

#villain-bio-heading,
h2 {
    font-family: "Cinzel Decorative", sans-serif;
    font-size: 200%;
    color: #4b0751;
    text-align: center;
    padding: 15px 0px;
    text-decoration-line: underline;
    text-decoration-style: double;
}

.villain-name-headings {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    text-align: center;
    font-size: 150%;
}

.click-here {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    text-align: center;
    font-size: 150%;
    padding-bottom: 20px;
}

/* images & video */

.female-villain-image {
    width: 25%;
    height: auto;
    padding-left: 20px;
    padding-right: 20px;
}

.male-villain-image {
    width: 25%;
    height: auto;
    padding-left: 20px;
    padding-right: 20px;
}

#villains-image {
    width: 100%;
    height: 400px;
    padding-bottom: 50px;
    text-align: center;
}

#queen-of-hearts-image {
    float: right;
}

#cruella-image {
    float: right;
}

#jafar-image {
    float: right;
}

#dr-facillier-image {
    float: right;
}

#villains-timeline {
    text-align: center;
}

#villain-medley-video {
    text-align: center;
    width: 100%;
    height: 500px;
}

/* nav bar */

#menu {
    font-size: 100%;
    font-family: "Cinzel Decorative", sans-serif;
    list-style-type: none;
    text-align: center;
    color: #4b0751;
    padding: 5px;
}

#menu li {
    display: inline-block;
}

#menu a {
    text-decoration: none;
    display: inline-block;
    padding: 7px;
    background-color: white;
    opacity: 75%;
    border: thick solid #4b0751;
    border-radius: 25px;
}

#menu a:hover {
    background-color: #4b0751;
    color: white;
}

#menu .active {
    background-color: #4b0751;
    color: white;
}

/* body text */

body {
    background-color: #BFBBBB;
    margin: 0px;
}

#page-opener {
    text-align: center;
    color: #4b0751;
    border: thick solid #4b0751;
    border-radius: 25px;
    padding: 10px;
    width: 65%;
    margin: auto;
    font-size: 150%;
    background-color: white;
    opacity: 75%;
}

hr {
    background-color: white;
    height: 3px;
    border: none;
}

.villain-bio-paragraph {
    width: 75%;
    color: #4b0751;
    border: thick solid #4b0751;
    border-radius: 25px;
    padding: 10px;
    margin: auto;
    background-color: white;
    opacity: 75%;
    font-size: 125%;
}

/* footer */

footer {
    text-align: center;
}

footer h3 {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    letter-spacing: 5px;
}

footer li {
    display: inline-block;
    color: white;
    padding-right: 20px;
    list-style: none;
}

footer label {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    font-size: 120%;
}

footer input[type=email] {
    font-size: 120%;
}

footer input[type=submit] {
    font-size: 120%;
}

/* Villain request form */

.form-section {
    max-width: 100%;
    text-align: center;
}

.form-section h3 {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    font-size: 20px;
    text-decoration-line: underline;
    text-decoration-style: double;
}

input[type=text] {
    padding: 10px;
    margin: 0 auto;
    width: 50%;
    opacity: 75%;
    border: thick solid #4b0751;
    border-radius: 25px;
    display: flex;
    flex-direction: column;
}

.form-section input[type=email] {
    padding: 10px;
    margin: 0 auto;
    width: 50%;
    opacity: 75%;
    border: thick solid #4b0751;
    border-radius: 25px;
    display: flex;
    flex-direction: column;
}

.form-section label {
    font-family: "Cinzel Decorative", sans-serif;
    color: #4b0751;
    display: inline-block;
    text-align: center;
    margin: auto;
    font-size: 25px;
    width: 75%;
}

#villain-submit {
    border: thick solid #4b0751;
    text-align: center;
    font-family: "Cinzel Decorative", sans-serif;
    margin-top: 20px;
    font-size: 150%;
}

.form-section input[type=email]:hover {
    border: thick solid white;
}

#villain-submit:hover {
    background-color: #4b0751;
    color: white;
}

input[type=text]:hover {
    border: thick solid white;
}

/* table */

table {
    width: 100%;
    margin: auto;
    padding-bottom: 20px;
}

.villain-info {
    border: thick solid #4b0751;
    background-color: white;
    opacity: 75%;
    font-size: 120%;
}

/* timeline */

* {
    box-sizing: border-box;
}

/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: white;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
}

/* Container around content */
.container {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
}

/* The circles on the timeline */
.container::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: white;
    border: 4px solid #4b0751;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}

/* Place the container to the left */
.left {
    left: 0;
}

/* Place the container to the right */
.right {
    left: 50%;
}

/* Add arrows to the left container (pointing right) */
.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent white;
}

/* Add arrows to the right container (pointing left) */
.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
}

/* Fix the circle for containers on the right side */
.right::after {
    left: -16px;
}

/* The actual content */
.content {
    background-color: white;
    position: relative;
    border-radius: 6px;
    border: 4px solid #4b0751;
    color: #4b0751;
    text-align: center;
    font-size: 125%;
}

/* media queries */

@media screen and (max-width: 1200px) {
    #menu li {
        margin: auto;
        font-size: 50%;
        text-decoration: none;
    }

    #villains-image {
        width: 100%;
        height: auto;
        padding-bottom: 20px;
    }

    img {
        width: 100%;
        height: auto;
    }

    #page-opener {
        font-size: 100%;
    }

    .female-villain-image {
        width: 75%;
        height: auto;
    }

    .male-villain-image {
        width: 75%;
        height: auto;
    }

    .villain-info {
        width: 50%;
    }

    #villain-medley-video {
        width: 100%;
        height: auto;
        margin: auto;
    }

    iframe {
        width: 100%;
    }

    .form-section {
        max-width: 100%;
    }

    input[type=text] {
        padding: 10px;
        width: 75%;
        opacity: 75%;
        border: thick solid #4b0751;
        border-radius: 25px;
        margin: auto;
    }

    .form-section input[type=email] {
        padding: 10px;
        width: 75%;
        opacity: 75%;
        border: thick solid #4b0751;
        border-radius: 25px;
        margin: auto;
    }

    .form-section label {
        font-family: "Cinzel Decorative", sans-serif;
        color: #4b0751;
        text-align: left;
    }
}

@media screen and (max-width: 600px) {

    /* Place the timelime to the left */
    .timeline::after {
        left: 31px;
    }

    /* Full-width containers */
    .container {
        width: 100%;
        padding-left: 70px;
        padding-right: 25px;
    }

    /* Make sure that all arrows are pointing leftwards */
    .container::before {
        left: 60px;
        border: medium solid white;
        border-width: 10px 10px 10px 0;
        border-color: transparent white transparent transparent;
    }

    /* Make sure all circles are at the same spot */
    .left::after,
    .right::after {
        left: 15px;
    }

    /* Make all right containers behave like the left ones */
    .right {
        left: 0%;
    }

    .content {
        font-size: 100%;
    }

    #menu li {
        margin-right: 50px;
        font-size: 75%;
        text-decoration: none;
    }

    #menu ul {
        margin-left: 15%;
    }

    #villains-image {
        width: 100%;
        height: auto;
    }

    img {
        width: 100%;
        height: auto;
    }

    #page-opener {
        font-size: 100%;
    }

    .female-villain-image {
        width: 75%;
        height: auto;
    }

    .male-villain-image {
        width: 75%;
        height: auto;
    }

    .villain-info {
        width: 50%;
    }

    #villain-medley-video {
        width: 100%;
        height: auto;
        margin: auto;
    }

    iframe {
        width: 100%;
    }

    .form-section {
        margin: auto;
    }

    input[type=text] {
        padding: 10px;
        text-align: left;
        width: 100%;
        opacity: 75%;
        border: thick solid #4b0751;
        border-radius: 25px;
    }

    .form-section input[type=email] {
        padding: 10px;
        text-align: left;
        width: 100%;
        opacity: 75%;
        border: thick solid #4b0751;
        border-radius: 25px;
    }

    .form-section label {
        font-family: "Cinzel Decorative", sans-serif;
        color: #4b0751;
        display: inline-block;
        text-align: center;
    }
}

